<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="animal"
            type="com.example.petadopt.data.domain.Animal" />
        <variable
            name="animalListener"
            type="com.example.petadopt.ui.overview.AnimalListener" />
        <variable
            name="favouriteListener"
            type="com.example.petadopt.ui.overview.FavouriteListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="1dp"
            app:cardMaxElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="16:6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> animalListener.onClick(animal.id, animal.type)}">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/animalTypeImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:alpha="0.05"
                    android:contentDescription="@string/animal_type_image_description"
                    android:scaleType="fitEnd"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/dog_silhouette" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView2"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="@dimen/app_margin"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:cardMaxElevation="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintDimensionRatio="1:1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/previewImage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#f5f5f5"
                        android:contentDescription="@string/overview_preview_description"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_pets_24" />

                </androidx.cardview.widget.CardView>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="4dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/favouriteImageView"
                    app:layout_constraintStart_toEndOf="@+id/cardView2"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/nameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_bold"
                        android:text="@{animal.name}"
                        android:textSize="24sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/breedTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/asap_semi_bold"
                        android:text="@{animal.breed}"
                        android:textSize="16sp"
                        app:layout_constraintStart_toStartOf="@+id/nameTextView"
                        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

                    <TextView
                        android:id="@+id/sexAndAgeTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/asap_semi_bold"
                        android:text="@string/overview_item_sexAndAge"
                        android:textColor="@color/grey"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/breedTextView"
                        app:layout_constraintTop_toBottomOf="@+id/breedTextView" />

                    <TextView
                        android:id="@+id/heightTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.5"
                        android:fontFamily="@font/asap_semi_bold"
                        android:text="@{@string/overview_dogitem_height(animal.height)}"
                        android:textSize="12sp"
                        app:layout_constraintStart_toStartOf="@+id/sexAndAgeTextView"
                        app:layout_constraintTop_toBottomOf="@+id/sexAndAgeTextView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <ImageView
                    android:id="@+id/favouriteImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/app_margin"
                    android:alpha="0.25"
                    android:contentDescription="@string/overview_item_favourite_icon"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_baseline_favorite_24"
                    android:onClick="@{() -> favouriteListener.onClick(animal)}"/>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>